@@ -1,3 +1,9 @@
+2006-02-04  Thomas Koenig  <Thomas.Koenig@online.de>
+
+	PR fortran/26039
+	PR fortran/25046
+	* maxval_maxloc_conformance_1.f90:  New test.
+
 2006-02-03  Steven G. Kargl  <kargls@comcast.net>
 
 	PR fortran/24958
